# ComfyUI-Open-Sora-Plan

./: README.md  nodes.py  pyproject.toml  requirements.txt  wf.json
opensora/models/diffusion/diffusion/: gaussian_diffusion_t2v.py
opensora/models/diffusion/latte/: modeling_latte.py  modules.py
opensora/models/frame_interpolation/: readme.md
opensora/sample/: pipeline_videogen.py  sample_t2v.py
scripts/accelerate_configs/: zero2_offload.json
